Update home. Delete about

--- a/angular.json
+++ b/angular.json
@@ -50,10 +50,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
               "src/styles.css"
             ],
             "scripts": [
-              
+
             ]
           },
           "configurations": {
