--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       # Setup nodeJS
       - name: Setup nodejs
         uses: actions/setup-node@v4.0.1
-        with: 
+        with:
           node-version: "21"
       # install dependencies
       - name: Install deps
@@ -40,7 +40,7 @@ jobs:
       - name: Deploy to Pages
         uses: crazy-max/ghaction-github-pages@v4.0.0
         with:
-          build_dir: dist/
-        env: 
+          build_dir: dist/website-ingaamira-dev/browser
+        env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      
+
