--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,9 @@ jobs:
       # Buil app for production
       - name: Build app bundle
         run: npm run build:prod
+      # Route file renaming
+      - name: Rename index for routing
+        run: mv dist/website-ingaamira-dev/browser/index.html dist/website-ingaamira-dev/browser/404.html
       # Deploy to Github pages
       - name: Deploy to Pages
         uses: crazy-max/ghaction-github-pages@v4.0.0
