Update routing. Add translate in Name. Update CV Data en. Update index app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,14 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "baseUrl": "./src"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true,
-    "baseUrl": "./src"
+    "strictTemplates": true
   }
+
 }
