--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration production --base-href /website-ingaamira-dev/",
-    "build:href": "ng build --base-href ./",
-    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
+    "build:prod": "ng build --configuration=production --base-href='https://IngAamiraDev.github.io/website-ingaamira-dev/'",
+    "build:ghpages": "ngh --dir=dist/website-ingaamira-dev/browser",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "delete:docs": "del docs",
-    "copy:dist": "copyfiles dist/website-ingaamira-dev/browser/*.* ./docs -f"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
