--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 /out-tsc
 /bazel-out
 
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
 # IDEs and editors
 .idea/
 .project
@@ -14,6 +19,14 @@
 *.launch
 .settings/
 *.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
 # Miscellaneous
 /.angular/cache
@@ -27,38 +40,3 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Node
-/node_modules
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-**.vscode
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-.history/*
-
-# Angular
-**.angular
